# bpi-to-rss

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  generateRssFeed.py  generate_feeds.py  generate_feeds.sh  pyproject.toml  requirements.txt  scrapper.py  scrapper2.py  serve_feeds.py  start_service.sh
.github/workflows/: deploy.yml  pytest.yml
bpi2rss/: ajax call.bru  bpi apples à projet page 2.bru  bruno.json
scrappers/: APIScrapper.py  BaseScrapper.py  BpifranceScrapper.py  GniusScrapper.py  IleDeFranceScrapper.py  ProjetAchatPublicScrapper.py  WebScrapper.py  __init__.py  base.py  bpi.py  gnius.py
templates/: index.html
tests/: bpi_data.html  test_bpi_scrapping.py
