[project]
name = "bpi-to-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"feedgen>=0.9.0",
	"requests>=2.24.0",
	"beautifulsoup4==4.9.3",
	"sentry-sdk==2.8.0",
	"dateparser==1.2.0",
	"feedparser==6.0.11",
	"fastapi==0.111.0",
	"uvicorn>=0.30.0"
]
